--- a/templates/base-user.html
+++ b/templates/base-user.html
@@ -27,7 +27,7 @@
         <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="https://rhdevnation.slack.com/archives/C01DUG759U0">Help (Slack)</a>
+        <a class="nav-link" href="https://rhdevnation.slack.com/archives/C01DUG759U0" target="_blank">Help (Slack)</a>
       </li>
 
     </ul>
