--- a/templates/admin.html
+++ b/templates/admin.html
@@ -75,6 +75,8 @@
         <tr>
           <th scope="col">Email</th>
           <th scope="col">Name</th>
+          <th scope="col">Company</th>
+          <th scope="col">Country</th>
           <th scope="col">Geo</th>
           <th scope="col">Action</th>
         </tr>
@@ -87,6 +89,12 @@
           </td>
           <td>
             {{user.name}}
+          </td>
+          <td>
+            {{user.company}}
+          </td>
+          <td>
+            {{user.country}}
           </td>
           <td>
             {{user.geo}}
