Add Login support

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -1,7 +1,7 @@
 {% extends 'base-admin.html' %}
 
 
-{% block title %} Get a Cluster! {% endblock %}
+{% block title %} Administration Panel {% endblock %}
 
 
 {% block body %}
