--- a/templates/registration.html
+++ b/templates/registration.html
@@ -23,7 +23,7 @@
       <tbody>
           <tr>
             <td>
-                <a href="{{cluster.login_url}}" target="_blank">Link</a>
+                <a href="{{cluster.login_url}}" target="_blank">Login at IBM Cloud</a>
             </td>
             <td>
                 {{cluster.username}}
@@ -32,7 +32,7 @@
                 {{cluster.password}}
             </td>
             <td>
-                <a href="{{cluster.workshop_url}}" target="_blank">Link</a>
+                <a href="{{cluster.workshop_url}}" target="_blank">OpenShift Tutorial</a>
             </td>
           </tr>
         </tbody>
