--- a/templates/base-admin.html
+++ b/templates/base-admin.html
@@ -32,7 +32,7 @@
 
 
          <li class="nav-item">
-        <a class="nav-link" href="#">Logout</a>
+        <a class="nav-link" href="/admin/logout">Logout</a>
       </li>
 
 
@@ -44,9 +44,6 @@
   </div>
 
   </div>
-
-    <a href=""><button class="btn btn-success navbar-btn">Login</button> </a>
-     <a href=""><button class="btn btn-success navbar-btn">Signup</button> </a>
 </nav>
 
 
