Fix query cache issues on admin panel

--- a/templates/user.html
+++ b/templates/user.html
@@ -19,7 +19,7 @@
             {% endif %}
           {% endwith %}
           <label for="email">Email address</label>
-          <input type="email" class="form-control" id="email" name="email" aria-describedby="emailHelp" placeholder="Enter your email address used in event registration">
+          <input type="email" class="form-control" id="email" name="email" aria-describedby="emailHelp" placeholder="Enter your email address used in event registration" required>
           <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
