--- a/templates/login.html
+++ b/templates/login.html
@@ -18,11 +18,11 @@
          {% endif %}
     {% endwith %}
     <label for="email">Email address</label>
-    <input type="email" class="form-control" id="email" name="email" aria-describedby="emailHelp">
+    <input type="email" class="form-control" id="email" name="email" aria-describedby="emailHelp" required>
   </div>
   <div class="form-group">
     <label for="password">Password</label>
-    <input type="password" class="form-control" id="password" name="password">
+    <input type="password" class="form-control" id="password" name="password" required>
   </div>
   <div class="form-group form-check">
     <input type="checkbox" class="form-check-input" id="rememberMe" name="rememberMe">
