--- a/templates/base-admin.html
+++ b/templates/base-admin.html
@@ -30,8 +30,10 @@
         <a class="nav-link" href="/">Home</a>
       </li>
 
-
-         <li class="nav-item">
+      <li class="nav-item">
+        <a class="nav-link" href="/admin/data/export">Export Cluster Usage Data (CSV)</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="/admin/logout">Logout</a>
       </li>
 
