--- a/templates/base-admin.html
+++ b/templates/base-admin.html
@@ -27,7 +27,7 @@
         <a class="nav-link" href="/admin/panel">Admin <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/">Homepage</a>
+        <a class="nav-link" href="/">Get Cluster Form</a>
       </li>
 
       <li class="nav-item">
