--- a/templates/admin.html
+++ b/templates/admin.html
@@ -128,7 +128,7 @@
           <input type="text" class="form-control" id="c_jobrole" name="c_jobrole" placeholder="Optional">
         </div>
       </div>
-      <button class="btn btn-primary" type="submit">Submit form</button>
+      <button class="btn btn-primary" type="submit">Add</button>
     </form>
     
     <script>
