--- a/templates/registration.html
+++ b/templates/registration.html
@@ -4,6 +4,59 @@
 {% block title %} Your Cluster {% endblock %}
 
 {% block body %}
+
+<script>
+  function copyToClipBoard(id) {
+  /* Get the text field */
+  var copyText = document.getElementById(id);
+
+  /* Select the text field */
+  copyText.select();
+  copyText.setSelectionRange(0, 99999); /*For mobile devices*/
+
+  /* Copy the text inside the text field */
+  document.execCommand("copy");
+
+}
+</script>
+<style type="text/css">
+  button#toggle-password {
+  position: absolute;
+  top: 3px;
+  right: 4px;
+  z-index: 9;
+  width: 28px;
+  height: 30px;
+  background: 0;
+  border: 0;
+}
+
+button#toggle-password:active,
+button#toggle-password:focus,
+button#toggle-password:hover {
+  cursor: pointer;
+}
+
+button#toggle-password:focus {
+  outline: none !important;
+}
+
+.input-password {
+  padding-right: calc(1.5em + .75rem);
+  background-repeat: no-repeat;
+  background-position: right calc(.375em + .1875rem) center;
+  background-size: calc(.75em + .375rem) calc(.75em + .375rem);
+}
+
+.input-password[type="password"]:valid {
+  background-image: url("data:image/svg+xml,%3Csvg width='1em' height='1em' viewBox='0 0 16 16' fill='currentColor' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M13.359 11.238C15.06 9.72 16 8 16 8s-3-5.5-8-5.5a7.028 7.028 0 0 0-2.79.588l.77.771A5.944 5.944 0 0 1 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13.134 13.134 0 0 1 14.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755-.165.165-.337.328-.517.486l.708.709z'/%3E%3Cpath d='M11.297 9.176a3.5 3.5 0 0 0-4.474-4.474l.823.823a2.5 2.5 0 0 1 2.829 2.829l.822.822zm-2.943 1.299l.822.822a3.5 3.5 0 0 1-4.474-4.474l.823.823a2.5 2.5 0 0 0 2.829 2.829z'/%3E%3Cpath d='M3.35 5.47c-.18.16-.353.322-.518.487A13.134 13.134 0 0 0 1.172 8l.195.288c.335.48.83 1.12 1.465 1.755C4.121 11.332 5.881 12.5 8 12.5c.716 0 1.39-.133 2.02-.36l.77.772A7.029 7.029 0 0 1 8 13.5C3 13.5 0 8 0 8s.939-1.721 2.641-3.238l.708.709z'/%3E%3Cpath fill-rule='evenodd' d='M13.646 14.354l-12-12 .708-.708 12 12-.708.708z'/%3E%3C/svg%3E") !important;
+}
+
+.input-password[type="text"]:valid {
+  background-image: url("data:image/svg+xml,%3Csvg width='1em' height='1em' viewBox='0 0 16 16' fill='currentColor' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' d='M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8zM1.173 8a13.134 13.134 0 0 0 1.66 2.043C4.12 11.332 5.88 12.5 8 12.5c2.12 0 3.879-1.168 5.168-2.457A13.134 13.134 0 0 0 14.828 8a13.133 13.133 0 0 0-1.66-2.043C11.879 4.668 10.119 3.5 8 3.5c-2.12 0-3.879 1.168-5.168 2.457A13.133 13.133 0 0 0 1.172 8z'/%3E%3Cpath fill-rule='evenodd' d='M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5zM4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0z'/%3E%3C/svg%3E") !important;
+}
+
+</style>
 <div class="container">
   <br>
   <br>
@@ -23,19 +76,56 @@
       <tbody>
           <tr>
             <td>
-                <a href="{{cluster.login_url}}" target="_blank">Login at IBM Cloud</a>
+                <a href="{{cluster.login_url}}" target="_blank"><h5>Login at IBM Cloud</h5></a>
             </td>
             <td>
-                {{cluster.username}}
+              <div class="form-row align-items-center">
+                <div class="input-group" style="width: 150px;">
+                <input type="text" class="form-control rounded-right" id="username" value="{{cluster.username}}">
+              </div>
+              
+              <button type="button" class="btn btn-outline-primary" onclick="copyToClipBoard('username')">
+                Copy
+                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-clipboard" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd" d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1h1a1 1 0 0 1 1 1V14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V3.5a1 1 0 0 1 1-1h1v-1z"/>
+                  <path fill-rule="evenodd" d="M9.5 1h-3a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm-3-1A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3z"/>
+                </svg>
+              </button>
+          
+              </div>
             </td>
             <td>
-                {{cluster.password}}
+              <div class="form-row align-items-center">
+              <div class="input-group" style="width: 150px;" >
+                <input type="password" id="password" class="form-control rounded-right" spellcheck="false" autocorrect="off" autocapitalize="off" value="{{cluster.password}}">
+                <button id="toggle-password" type="button" class="d-none"
+                  aria-label="Show password as plain text. Warning: this will display your password on the screen.">
+                </button>
+              </div>
+              <button type="button" class="btn btn-outline-primary" onclick="copyToClipBoard('password')">
+                Copy
+                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-clipboard" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd" d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1h1a1 1 0 0 1 1 1V14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V3.5a1 1 0 0 1 1-1h1v-1z"/>
+                  <path fill-rule="evenodd" d="M9.5 1h-3a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm-3-1A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3z"/>
+                </svg>
+              </button>
+            </div>
+                
             </td>
             <td>
-                <a href="{{cluster.workshop_url}}" target="_blank">OpenShift Tutorial</a>
+                <a href="{{cluster.workshop_url}}" target="_blank"><h5>OpenShift Tutorial</h5></a>
             </td>
           </tr>
         </tbody>
       </table>
     </div>
+    <script type="module">
+      document.getElementById("password").classList.add("input-password"),document.getElementById("toggle-password").classList.remove("d-none");
+      const passwordInput=document.getElementById("password"),togglePasswordButton=document.getElementById("toggle-password");
+      togglePasswordButton.addEventListener("click",togglePassword);
+      function togglePassword(){
+        "password"===passwordInput.type?(passwordInput.type="text",togglePasswordButton.setAttribute("aria-label","Hide password.")):(passwordInput.type="password",togglePasswordButton.setAttribute("aria-label","Show password as plain text. Warning: this will display your password on the screen."))
+      }
+    </script>
+
 {% endblock %}
