--- a/templates/user.html
+++ b/templates/user.html
@@ -14,7 +14,7 @@
           {% with messages = get_flashed_messages() %}
             {% if messages %}
             <div class="alert alert-danger" role="alert">
-                {{ messages[0] }}. Contact us on <a href="https://rhdevnation.slack.com/archives/C01DUG759U0">Slack</a> for support.
+                {{ messages[0] }}. Contact us on <a href="https://rhdevnation.slack.com/archives/C01DUG759U0" target="_blank">Slack</a> for support.
               </div>
             {% endif %}
           {% endwith %}
