List assigned clusters number

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -19,7 +19,7 @@
     </form>
     <br>
     <br>
-    <h2>Clusters: {{ clusters|length }}</h2>
+    <h2>Clusters: {{ clusters|length }} | Assigned: {{ assigned }}</h2>
     <table class="table">
       <thead class="thead-dark">
         <tr>
