--- a/templates/base-admin.html
+++ b/templates/base-admin.html
@@ -31,7 +31,7 @@
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" href="/admin/data/export">Export Cluster Usage Data (CSV)</a>
+        <a class="nav-link" href="/admin/data/export_xlsx">Export Cluster Usage Data (XLSX)</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/admin/logout">Logout</a>
