--- a/templates/admin.html
+++ b/templates/admin.html
@@ -47,7 +47,7 @@
             </form>
           </td>
           <td>
-	          <a href="{{cluster.workshop_url}}">Workshop URL</a>
+	          <a href="{{cluster.workshop_url}}" target="_blank">Workshop URL</a>
           </td>
           <td>
             <form method="POST" action="/cluster/delete" style="display: inline">
